# dni_processor

./: .env.example  .gitignore  404.html  CHANGELOG.md  README.md  ROADMAP.md  detect_frentes_report.json  docs-requirements.txt  index.html  mkdocs.yml  objects.inv  probe_detectors.py  probe_detectors_v2.py  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: docs.yml
CALIBRACION/: index.html
app/: config.py  main.py  middleware.py  rate_limiter.py
app/core/: composer.py  constants.py  crop_adjustments.py  geometry.py  matcher.py  ocr.py  pipeline.py  sessions.py  vision.py
app/schemas/: api.py  session.py  web.py
app/web/: routes.py
arquitectura/decisiones/: index.html
arquitectura/overview/: index.html
arquitectura/pipeline/: index.html
arquitectura/sesiones/: index.html
changelog/: index.html
deployment/: README_DEPLOY.md  dni_processor.service
deployment/configuracion/: index.html
deployment/instalacion/: index.html
deployment/operacion/: index.html
deployment/tailscale/: index.html
docs/: CALIBRACION.md  index.md
docs/arquitectura/: decisiones.md  overview.md  pipeline.md  sesiones.md
docs/deployment/: configuracion.md  instalacion.md  operacion.md  tailscale.md
docs/guia/: flujo.md  fotografia.md  quickstart.md
docs/referencia/: api.md  modulos.md  schemas.md
guia/flujo/: index.html
guia/fotografia/: index.html
guia/quickstart/: index.html
referencia/api/: index.html
scripts/: calibrate.py  detect_frentes.py  preload_models.py  process_batch.py
search/: search_index.json
tests/: conftest.py
(+31 files in other folders)
