[project]
name = "dni-processor"
version = "0.1.0"
description = "Extractor y organizador de DNIs argentinos en PDF — preserva integridad documental para uso notarial"
authors = [
    { name = "Hernan" }
]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["tests*", "scripts*", "deployment*", "data*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"
markers = [
    "unit: tests unitarios rápidos",
    "integration: tests de integración (pipeline completo)",
    "slow: tests que tardan más de 5s",
    "real_data: tests que requieren imágenes reales (no en CI)",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N"]
ignore = ["E501"]  # line length manejado por ruff format
